2019-06-04  Charlie Zender  <zender@uci.edu>

	* Fix Newton-Raphson computation of Gaussian grid interfaces for n2s grids (including ECMWF)

2019-06-03  Charlie Zender  <zender@uci.edu>

	* Interpolation of hybrid grids from ECMWF IFS input files appears to work

2019-06-02  Charlie Zender  <zender@uci.edu>

	* nco_rgr.c print absolute convergence at last iteration step for failed Gaussian calculations

	* Add stubs to understand and interpolate hybrid grids from ECMWF IFS input files

	* Address warnings found by Pedro with MSVC Studio Version 19

2019-05-31  Charlie Zender  <zender@uci.edu>

	* Allow ncremap to work when ERWG is not found and not needed

2019-05-30 Henry Butowsky  <henryb@hush.com>

        * ncks --rgr msh_fl=msh.nc for SCRIP-formatted netCDF overlap mesh

2019-05-29  Charlie Zender  <zender@uci.edu>

	* Fix mis-formatted fprintf() statements

2019-05-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.1-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.1-alpha03: Compy';git push
	git tag -a 4.8.1-alpha03 -m 'ncremap/ncclimo compy, job_nbr csn;';git push --tags

	* nco_ntp_vrt() add stubs for depth coordinate

2019-05-26  Charlie Zender  <zender@uci.edu>

	* ncclimo use job_nbr in seasonal climos

	* Prevent automatic writing of output grid to nco_map_tst_out.nc

	* Ensure compy MPI mode uses srun

	* Deprecate edison and hopper from ncremap/ncclimo scripts

2019-05-25  Charlie Zender  <zender@uci.edu>

	* Add compy to ncremap/ncclimo HPC database

2019-05-22  Charlie Zender  <zender@uci.edu>

	* Expand HINT when GenerateOverlapMesh fails

2019-05-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.8.1-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.8.1-alpha02: Knee Wrench';git push
	git tag -a 4.8.1-alpha02 -m 'ORourke BSD license/copyright;ncclimo vrt_fl';git push --tags

	* ncclimo MPAS branch passes vertical interpolation arguments

2019-05-18  Charlie Zender  <zender@uci.edu>
